# fates-landuse-datatool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  lint.yml  pull-request.yaml  setup-conda.yml  unit.yml  weekly.yml
src/landusedata/: __main__.py  _main.py  landusepft.py  luh2.py  regrid.py  utils.py
tests/: conftest.py  landusepft_test.py  main_test.py  utils_test.py
tests/resources/: surfdata_4x5.nc
