[project]
name = "landusedata"
version = "0.0.0"
authors = [
    { name = "Gregory Lemieux", email = "glemieux@lbl.gov" },
]
description = "Python package to processing Land Use Harmonization data for use with FATES"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering"
]
dynamics = ["dependencies","optional-dependencies"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-test.txt"] }}

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
    "--verbose",
    "--color=yes",
]
[project.scripts]
fates-landusedata = "landusedata._main:main"
